--- a/src/pages/exercices/variables.html
+++ b/src/pages/exercices/variables.html
@@ -38,37 +38,51 @@
       </nav>
       <h1 class="text-3xl text-center my-5 font-bold">Exercices sur les variables</h1>
     <script>
-        let declaration;
+         //!---------------------------------------------------------------------------
+        //!----------------------- EXERCICE Variables --------------------------------
+        //!---------------------------------------------------------------------------
+        //! EXO 1 VARIABLES         //TODO: On doit se débrouiller pour créer une variable, 
+        //TODO: Lui Assigner une valeur (genre un nombre ou une chaine de caractère)
+        //TODO: On doit afficher cette Variable dans la console du navigateur
+        //Déclaration
+        let monNumFetiche;
+        // Assignation
+        monNumFetiche = 77;
+        // Déclaration + Assignation
+        let maVariable = 11;
+        let uneAutreVariable = 'Steven Seagal';
+        let monTabloClient = ['Client1', maVariable, 109];
+        
+        let uneVariableObjet = {
+            // ↓ Propriétés de l'objet (auxquelles on assigne 
+            //des valeur mais avec les : pas le =)
+            'ChuckNorris': 99,
+            'StevenSIgal': 100,
+            'BruceWillis': 'DieHard',
+            unePropriete: 'lol'
+        };
 
-        declaration = "affectee";
-        let number = 1;
-        let string = "Hi there";
-        let boolean = true;
-        let array = [1,"Bonjour",3,boolean,5];
-        let object = {name:"John", lastname:"Snow"};
-
-        let maFonctionHello = () => {
-        console.log("Hello "+ object.name + " " + object.lastname);
+        let maFonctionHello = function () {
+            console.log('Coucou');
         }
 
+        console.log(maVariable);
+        console.log('-------TYPE OF -------');
+        console.log(typeof maVariable);
+        console.log(typeof 123);
+        console.log(typeof "yoyoyo");
+        console.log(uneAutreVariable);
+        console.log(monTabloClient);
+        console.log(monTabloClient[1]);
+        console.log(uneVariableObjet);
+        console.log(uneVariableObjet.BruceWillis);//Notation en point
+        console.log(uneVariableObjet.unePropriete);//Notation en point
+        console.log(uneVariableObjet['ChuckNorris']);//tableau associatif
+        console.log(uneVariableObjet['unePropriete']);//tableau associatif
+        console.log('HELLO WORLD');
         maFonctionHello();
-
-        console.log(number);
-        console.log(string);
-        console.log(boolean);
-        console.log(array);
-        console.log(object);
-
-        console.log(array[2]);
-        console.log(object.name);
-
-        console.log("tableau associatif")
-        console.log(object['name']);
-
-        console.log("--- TYPE OF ----")
-        console.log(typeof number);
-        console.log(typeof array);
-        console.log(typeof object);
+        console.log(maFonctionHello);
+        console.log(0.1+0.2);
 
     </script>
     <script type="module" src="/src/main.js"></script>
