feat:rebuild header, add pages

--- a/src/pages/exercices/variables.html
+++ b/src/pages/exercices/variables.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr" data-theme="light">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -19,6 +19,7 @@
                   <summary>Leçons</summary>
                   <ul class="bg-base-100 rounded-t-none p-2">
                     <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
+                    <li><a href="/src/pages/lessons/numbers.html">Nombres et calculs</a></li>
                   </ul>
                 </details>
               </li>
@@ -35,7 +36,7 @@
               <li><a href="#">Contact</a></li>
             </ul>
           </div>
-      </nav>
+    </nav>
       <h1 class="text-3xl text-center my-5 font-bold">Exercices sur les variables</h1>
     <script>
          //!---------------------------------------------------------------------------
