--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr" data-theme="light">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -8,34 +8,36 @@
   </head>
   <body>
   <nav class="navbar bg-base-100 shadow-md">
-          <div class="flex-1">
-            <a class="btn btn-ghost text-xl" href="/">JS CheatSheet</a>
-          </div>
-          <div class="flex-2">
-            <ul class="menu menu-horizontal px-1">
-              <li><a href="/">Accueil</a></li>
-              <li>
-                <details>
-                  <summary>Leçons</summary>
-                  <ul class="bg-base-100 rounded-t-none p-2">
-                    <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
-                  </ul>
-                </details>
-              </li>
-              
-              <li>
-                <details>
-                  <summary>Exercices</summary>
-                  <ul class="bg-base-100 rounded-t-none p-2">
-                    <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
-                  </ul>
-                </details>
-              </li>
-              <li><a href="#">TP</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-      </nav>
+  <div class="flex-1">
+    <a class="btn btn-ghost text-xl" href="/">JS CheatSheet</a>
+  </div>
+  <div class="flex-2">
+    <ul class="menu menu-horizontal px-1">
+      <li><a href="/">Accueil</a></li>
+      <li>
+        <details>
+          <summary>Leçons</summary>
+          <ul class="bg-base-100 rounded-t-none p-2">
+            <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
+            <li><a href="/src/pages/lessons/numbers.html">Nombres et calculs</a></li>
+            <li><a href="/src/pages/lessons/strings.html">Strings</a></li>
+          </ul>
+        </details>
+      </li>
+      
+      <li>
+        <details>
+          <summary>Exercices</summary>
+          <ul class="bg-base-100 rounded-t-none p-2">
+            <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
+          </ul>
+        </details>
+      </li>
+      <li><a href="#">TP</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+</nav>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
