--- a/src/pages/lessons/variables.html
+++ b/src/pages/lessons/variables.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr" data-theme="light">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -12,35 +12,37 @@
       <input id="drawer-toggle" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content flex flex-col min-h-screen">
         <!-- Navbar -->
-        <nav class="navbar bg-base-100 shadow-md">
-          <div class="flex-1">
-            <a class="btn btn-ghost text-xl" href="/">JS CheatSheet</a>
-          </div>
-          <div class="flex-2">
-            <ul class="menu menu-horizontal px-1">
-              <li><a href="/">Accueil</a></li>
-              <li>
-                <details>
-                  <summary>Leçons</summary>
-                  <ul class="bg-base-100 rounded-t-none p-2">
-                    <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
-                  </ul>
-                </details>
-              </li>
-              
-              <li>
-                <details>
-                  <summary>Exercices</summary>
-                  <ul class="bg-base-100 rounded-t-none p-2">
-                    <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
-                  </ul>
-                </details>
-              </li>
-              <li><a href="#">TP</a></li>
-              <li><a href="#">Contact</a></li>
-            </ul>
-          </div>
-      </nav>
+       <nav class="navbar bg-base-100 shadow-md">
+  <div class="flex-1">
+    <a class="btn btn-ghost text-xl" href="/">JS CheatSheet</a>
+  </div>
+  <div class="flex-2">
+    <ul class="menu menu-horizontal px-1">
+      <li><a href="/">Accueil</a></li>
+      <li>
+        <details>
+          <summary>Leçons</summary>
+          <ul class="bg-base-100 rounded-t-none p-2">
+            <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
+            <li><a href="/src/pages/lessons/numbers.html">Nombres et calculs</a></li>
+            <li><a href="/src/pages/lessons/strings.html">Strings</a></li>
+          </ul>
+        </details>
+      </li>
+      
+      <li>
+        <details>
+          <summary>Exercices</summary>
+          <ul class="bg-base-100 rounded-t-none p-2">
+            <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
+          </ul>
+        </details>
+      </li>
+      <li><a href="#">TP</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
+</nav>
 
         <!-- Main Content -->
         <main class="flex-1 container mx-auto px-4 sm:px-6 lg:px-8 py-6 sm:py-8">
