--- a/src/pages/exercices/strings.html
+++ b/src/pages/exercices/strings.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JS Super CheatSheet</title>
+    <title>Strings</title>
   </head>
   <body>
   <nav class="navbar bg-base-100 shadow-md">
@@ -39,6 +39,8 @@
     </ul>
   </div>
 </nav>
+<h1 class="text-3xl text-center my-5 font-bold">Exercices sur les strings</h1>
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
