--- a/src/pages/exercices/strings.html
+++ b/src/pages/exercices/strings.html
@@ -47,7 +47,7 @@
         let customerName = "Toto";
         let customerGender = "M.";
         let address = "11 avenue de l'Europe, 75000 Paris";
-        let joke = `Qu'est-ce qu'une pizza dit à une autre pizza qui lui demande des conseils ? n/ "Suis ta pâte et tout ira bien !"`;
+        let joke = `Qu'est-ce qu'une pizza dit à une autre pizza qui lui demande des conseils ? "Suis ta pâte et tout ira bien !"`;
         
         let sumUpPhrase;
         sumUpPhrase = `Le ${date}: 
