--- a/src/pages/lessons/variables.html
+++ b/src/pages/lessons/variables.html
@@ -35,6 +35,7 @@
           <summary>Exercices</summary>
           <ul class="bg-base-100 rounded-t-none p-2">
             <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
+            <li><a href="/src/pages/exercices/strings.html">Strings</a></li>
           </ul>
         </details>
       </li>
