--- a/src/pages/exercices/strings.html
+++ b/src/pages/exercices/strings.html
@@ -7,39 +7,8 @@
     <title>Strings</title>
   </head>
   <body>
-  <nav class="navbar bg-base-100 shadow-md">
-  <div class="flex-1">
-    <a class="btn btn-ghost text-xl" href="/">JS CheatSheet</a>
-  </div>
-  <div class="flex-2">
-    <ul class="menu menu-horizontal px-1">
-      <li><a href="/">Accueil</a></li>
-      <li>
-        <details>
-          <summary>Leçons</summary>
-          <ul class="bg-base-100 rounded-t-none p-2">
-            <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
-            <li><a href="/src/pages/lessons/numbers.html">Nombres et calculs</a></li>
-            <li><a href="/src/pages/lessons/strings.html">Strings</a></li>
-          </ul>
-        </details>
-      </li>
-      
-      <li>
-        <details>
-          <summary>Exercices</summary>
-          <ul class="bg-base-100 rounded-t-none p-2">
-            <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
-            <li><a href="/src/pages/exercices/strings.html">Strings</a></li>
-          </ul>
-        </details>
-      </li>
-      <li><a href="#">TP</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </div>
-</nav>
-<h1 class="text-3xl text-center my-5 font-bold">Exercices sur les strings</h1>
+  <div class="navbar-container"></div>
+  <h1 class="text-3xl text-center my-5 font-bold">Exercices sur les strings</h1>
     <script>
         const restaurantName = `"La pizzeria Raffinata"`;
         let date = new Date().toLocaleDateString('fr');
@@ -47,7 +16,8 @@
         let customerName = "Toto";
         let customerGender = "M.";
         let address = "11 avenue de l'Europe, 75000 Paris";
-        let joke = `Qu'est-ce qu'une pizza dit à une autre pizza qui lui demande des conseils ? "Suis ta pâte et tout ira bien !"`;
+        let joke = `Qu'est-ce qu'une pizza dit à une autre pizza qui lui demande des conseils ? 
+        "Suis ta pâte et tout ira bien !"`;
         
         let sumUpPhrase;
         sumUpPhrase = `Le ${date}: 
