--- a/src/pages/exercices/variables.html
+++ b/src/pages/exercices/variables.html
@@ -7,38 +7,7 @@
     <title>JS Super CheatSheet</title>
   </head>
   <body>
-  <nav class="navbar bg-base-100 shadow-md">
-  <div class="flex-1">
-    <a class="btn btn-ghost text-xl" href="/">JS CheatSheet</a>
-  </div>
-  <div class="flex-2">
-    <ul class="menu menu-horizontal px-1">
-      <li><a href="/">Accueil</a></li>
-      <li>
-        <details>
-          <summary>Leçons</summary>
-          <ul class="bg-base-100 rounded-t-none p-2">
-            <li><a href="/src/pages/lessons/variables.html">Variables</a></li>
-            <li><a href="/src/pages/lessons/numbers.html">Nombres et calculs</a></li>
-            <li><a href="/src/pages/lessons/strings.html">Strings</a></li>
-          </ul>
-        </details>
-      </li>
-      
-      <li>
-        <details>
-          <summary>Exercices</summary>
-          <ul class="bg-base-100 rounded-t-none p-2">
-            <li><a href="/src/pages/exercices/variables.html">Variables</a></li>
-            <li><a href="/src/pages/exercices/strings.html">Strings</a></li>
-          </ul>
-        </details>
-      </li>
-      <li><a href="#">TP</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </div>
-</nav>
+  <div class="navbar-container"></div>
       <h1 class="text-3xl text-center my-5 font-bold">Exercices sur les variables</h1>
     <script>
          //!---------------------------------------------------------------------------
