--- a/src/pages/lessons/functions.html
+++ b/src/pages/lessons/functions.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css">
-    <title>Les fonctions en JavaScript | Jefff303.js</title>
+    <title>Les fonctions en JavaScript </title>
 </head>
 
 <body class="min-h-screen bg-base-200">
@@ -36,13 +36,13 @@
                             </p>
                             <pre class="mockup-code text-left">
                 <code>
-// Déclaration de la fonction
-function direBonjour() {
-  console.log('Bonjour tout le monde !');
-}
+    // Déclaration de la fonction
+    function direBonjour() {
+    console.log('Bonjour tout le monde !');
+    }
 
-// Appel de la fonction
-direBonjour(); // Affiche 'Bonjour tout le monde !'
+    // Appel de la fonction
+    direBonjour(); // Affiche 'Bonjour tout le monde !'
                 </code>
               </pre>
                         </div>
@@ -60,20 +60,20 @@ direBonjour(); // Affiche 'Bonjour tout le monde !'
                             </p>
                             <pre class="mockup-code text-left">
                 <code>
-function addition(a, b) {
-  return a + b;
-}
+    function addition(a, b) {
+    return a + b;
+    }
 
-const resultat = addition(5, 3);
-console.log(resultat); // Affiche 8
+    const resultat = addition(5, 3);
+    console.log(resultat); // Affiche 8
 
-// Paramètre par défaut
-function saluer(nom = 'Visiteur') {
-  console.log('Salut, ' + nom + '!');
-}
+    // Paramètre par défaut
+    function saluer(nom = 'Visiteur') {
+    console.log('Salut, ' + nom + '!');
+    }
 
-saluer('Alice'); // 'Salut, Alice!'
-saluer();       // 'Salut, Visiteur!'
+    saluer('Alice'); // 'Salut, Alice!'
+    saluer();       // 'Salut, Visiteur!'
                 </code>
               </pre>
                         </div>
@@ -90,15 +90,15 @@ saluer();       // 'Salut, Visiteur!'
                             </p>
                             <pre class="mockup-code text-left">
                 <code>
-// Fonction classique
-const carre = function(x) {
-  return x * x;
-};
+    // Fonction classique
+    const carre = function(x) {
+    return x * x;
+    };
 
-// Version Fléchée (plus courte)
-const carreFleche = x => x * x;
+    // Version Fléchée (plus courte)
+    const carreFleche = x => x * x;
 
-console.log(carreFleche(4)); // Affiche 16
+    console.log(carreFleche(4)); // Affiche 16
                 </code>
               </pre>
                             <p class="mt-4 text-sm opacity-80">
